
2022-01-13  Ron Norman <rjn@inglenet.com>

	* parser.y: Accept  SOURCE  expression and more than one SUM
	* tree.c: If SOURCE is expression, create temp field for result
	* codegen.c: If SOURCE expression, report temp field

2022-01-13  Ron Norman <rjn@inglenet.com>

	* parser.y: Accept  SUM  expression-list
	* codegen.c: Update to generate code to compute SUM expressions
	* tree.c: Update to handle SUM expressions

2022-01-06  Ron Norman <rjn@inglenet.com>

	* codegen.c: Fix intialize of table to set 1st occurence
				and then propogate. Avoid if multiple VALUEs.
				Fix emitting literal for REPORT

2022-01-04  Ron Norman <rjn@inglenet.com>

	* codegen.c: Accept INDEXED file with PRIMARY KEY DUPLICATEs
	* parser.y: Warn if PRIMARY KEY WITH DUPLICATES and using BDB/OCI/ODBC

2021-12-30  Ron Norman <rjn@inglenet.com>

	* codegen.c: Fix handling of RESET ON phrase

2021-12-29  Ron Norman <rjn@inglenet.com>

	* parser.y: Save CONTROL FINAL fields
	* codegen.c: Emit CONTROL FINAL fields to cob_report

2021-12-25  Ron Norman <rjn@inglenet.com>

	* parser.y: Fix to check for missing REPORT data clauses
	* codegen.c: Handle report field with SOURCE "literal"
	* field.c:	Compute report field size for SOURCE "literal"
	* tree.c:	Check for report field missing PIC when using SUM clause

2021-12-23  Ron Norman <rjn@inglenet.com>

	* parser.y: Interim Changes to handle multiple VARYING clauses
				for a REPORT (More to come)
	* codegen.c: Handle report VARYING clause as a list
	* field.c:  Allow multiple VALUES when in REPORT section 

2021-12-18  Ron Norman <rjn@inglenet.com>

	* tree.h: Add extern cobc_in_data_division
	* tree.c: Clear cobc_in_data_division 
	* scanner.l: Check for typedef variable and return TYPEDEF_NAME
	* parser.y: Changes to look for TYPEDEF_NAME

2021-12-08  Ron Norman <rjn@inglenet.com>

	* codegen.c: When setting value into COMP-X field use cob_set_compx

2021-11-26  Ron Norman <rjn@inglenet.com>
